# music_rules

./: # @title Notes and Chords definition  .gitignore  CHANGELOG.md  LICENSE  PROJECT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
data/chord_tables/: chord_lexicon.json  chord_notes_long.csv  chord_voicings_wide.csv  note_to_midi.json  progression_template.csv  unresolved_notes.csv
data/eis/: EIS_MASTER_RULES.md
data/eis/extracted/: EIS_-_EIS_MurphySystemGuidesOrRules_TedGreene_1978-07-07.txt  EIS_-_EIS_MurphySystemResourcesAndDevices_TedGreene_1977-09-30.txt  EIS_-_EIS_ResourcesForWriting_TedGreene_1977-10-14_1978-07-20_1978-07-07.txt  EIS_-_ImportantNotesFactsResourcesAndDevicesOf_EIS_MurphySystem_TedGreene_1977-10-07and08.txt  EIS_all_combined.txt  EIS_web_supplement.md  IntroductionToTedGreenesPagesOnTheEIS_MurphySystem.txt
data/fux/: Counterpoint_rules_table.csv  FuxCP5_attribution.md
data/tables/: Counterpoint_rules_table.xlsx  EIS_rules_table.csv  EIS_rules_table.xlsx
docs/: MCP_TOOL_SURFACE_SPEC.md
examples/: HALF_coltrane.mid  HALF_monk.mid  SHOWCASE.md  after_hours_midtown.mid  bigpickle_solo.mid  demo_coltrane_half.mid  demo_eis.mid  demo_jazz.mid  demo_modal59.mid  demo_monk_half.mid  demo_monk_iiVI.mid  demo_prog.csv  deterministic_eis.mid  dre_1990s_gangsta.mid  dre_1990s_gangsta.py  eis_all_progressions_manifest.json  eis_e1_harmonized.csv  eis_e1_harmonized.mid  eis_e2_harmonized.csv  eis_e2_harmonized.mid  eis_e3_harmonized.csv  eis_e3_harmonized.mid  eis_e4_harmonized.csv  eis_e4_harmonized.mid  eis_e5_harmonized.csv  eis_e5_harmonized.mid  eis_e6_harmonized.csv  eis_e6_harmonized.mid  eis_tt_harmonized.csv  export_chord_tables.py  generate_eis_progressions.py  half_jazz.mid  half_rag.mid  half_rag_preview.mid  half_stride_rag.mid  half_stride_rag_preview.mid  half_swing.mid  half_swing_preview.mid  mcp_config.json  opencode_chord_progression_example.json  (+6 more)
music-rules.plugin/: README.md  mcp.json
music-rules.plugin/.cursor-plugin/: plugin.json
music-rules.plugin/skills/music-rules-compose/: SKILL.md
music-rules.plugin/skills/music-rules-corpus/: SKILL.md
music-rules.plugin/skills/music-rules-evaluate/: SKILL.md
music-rules.plugin/skills/music-rules-setup/: SKILL.md
src/music_rules/: __init__.py
src/music_rules/adapters/: __init__.py  cli.py  mcp.py  openai.py
src/music_rules/core/: __init__.py  corpus.py  evaluate.py  pitch.py  report.py  reporting.py
src/music_rules/core/eis/: __init__.py  chords.py  nct.py  ood.py  roots.py  scales.py  voice_leading.py
src/music_rules/core/fux/: __init__.py  _common.py  _m21.py  dissonance.py  harmonic.py  melodic.py  motion.py
src/music_rules/core/generate/: __init__.py  _form.py  _theory.py  bass.py  chords.py  drums.py  generator.py  lead.py  midi_write.py  style.py
src/music_rules/core/midi/: __init__.py  render.py  skytnt_bridge.py
src/music_rules/data/: __init__.py  rules.schema.json  rules_combined.json
src/music_rules/data/styles/: __init__.py  ambient_drone.json  bossa_lounge.json  chicago_house.json  dark_trap.json  delta_blues_shuffle.json  detroit_dilla.json  detroit_techno.json  doom_villain.json  dre_1990s_gangsta.json  dre_g_funk.json  drill_uk.json  funk_strut.json  liquid_dnb.json  lo_fi_study.json  memphis_phonk.json  neo_soul_vamp.json  nyc_boom_bap.json  reggae_one_drop.json  spaghetti_western.json  synthwave_80s.json  west_coast_bright.json
tests/: conftest.py  test_bundled_styles.py  test_cli.py  test_corpus.py  test_eis_chords.py  test_eis_nct.py  test_eis_ood.py  test_eis_roots.py  test_eis_scales.py  test_eis_voice_leading.py  test_evaluate.py  test_fux_checkers.py  test_generate_dre.py  test_mcp_adapter.py  test_openai_adapter.py  test_render_cli.py  test_reporting.py  test_skytnt_bridge.py
tests/fixtures/: __init__.py  fux_passages.py
