[build-system]
requires = ["hatchling>=1.24", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "music-rules"
dynamic = ["version"]
description = "AI-agnostic music theory constraint system for EIS and Fuxian species counterpoint, with thin adapters for MCP, OpenAI, FastAPI, and CLI."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Tony Bove" }]
keywords = [
    "music-theory", "counterpoint", "fux", "eis", "equal-interval-system",
    "midi", "mcp", "constraint-system", "ai-music", "skytnt",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

# Runtime deps. Kept lean on purpose: core/ pulls only `mido` + `pydantic`.
# Adapter deps (typer, fastapi, fastmcp) are imported by the adapters folder
# but are unconditional here so `pip install music-rules` Just Works for any
# adapter the user picks. SkyTNT/transformers deps are optional (heavy).
dependencies = [
    "mido>=1.3.2",
    "pydantic>=2.6",
    "typer>=0.12",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "fastmcp>=0.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Heavy: only install if you actually want the SkyTNT bridge.
skytnt = [
    "transformers>=4.40",
    "huggingface_hub>=0.23",
    "torch>=2.2",
]
# Dev tooling: lint, type-check, test, schema-validate.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "jsonschema>=4.22",
    "types-jsonschema>=4.22",
]

[project.scripts]
music-rules = "music_rules.adapters.cli:app"
music-rules-mcp = "music_rules.adapters.mcp:main"

[project.urls]
Homepage = "https://github.com/toe333/music-rules"
Documentation = "https://github.com/toe333/music-rules/blob/main/PROJECT.md"
Issues = "https://github.com/toe333/music-rules/issues"
Changelog = "https://github.com/toe333/music-rules/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Hatch configuration
# ---------------------------------------------------------------------------

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/music_rules/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/music_rules"]
# Ship the canonical rule corpus + schema as package data, but not the raw
# Ted Greene PDF extractions (they live under data/eis/extracted/ outside
# the package, and are dev-reference only — see data/README.md).
include = [
    "src/music_rules/data/*.json",
    "src/music_rules/py.typed",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/examples",
    "/data/README.md",
    "/data/eis/EIS_MASTER_RULES.md",
    "/data/fux",
    "/data/tables",
    "/PROJECT.md",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/pyproject.toml",
]
exclude = [
    "/data/eis/extracted/**",  # Ted Greene PDF text — not redistributed.
]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = [
    "E501",   # line length (ruff format already handles this)
    "RUF002", # ambiguous unicode in docstrings (— and × used intentionally)
    "RUF003", # ambiguous unicode in comments (× used intentionally)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "SIM102", "RUF007"]
"src/music_rules/adapters/cli.py" = ["B008"]   # typer requires defaults
"src/music_rules/adapters/openai.py" = ["SIM102"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/music_rules"]
# Relax strictness for adapters that re-export third-party schemas;
# core/ stays fully strict (enforced by the override below).
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "music_rules.core.*"
strict = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "mido.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastmcp.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "skytnt: marks tests requiring the SkyTNT/transformers extra",
]

[tool.coverage.run]
source = ["src/music_rules"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
